--- a/ARTICLE2/template.tex
+++ b/ARTICLE2/template.tex
@@ -1224,7 +1224,7 @@ Plot \ref{fig:rho_vs_average} illustrates the cost variation at each iteration u
 
  \begin{figure}[htbp]
   \centering
-  \includegraphics[width=0.8\textwidth]{images/rho_vas_average2.png}
+  \includegraphics[width=0.8\textwidth]{images/rho_vas_average.png}
   \caption{Cost variation at each iteration using the \(\rho\) selection method compared to random interval selection.}
   \label{fig:rho_vs_average}
 \end{figure}
